--- a/myMap2.html
+++ b/myMap2.html
@@ -7,20 +7,27 @@
     <title>Document</title>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
     <link rel="stylesheet" href="CSS/stylesheet.css" />
+    <link data-require="bootstrap-css" data-semver="3.3.6" rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.css" />
 </head>
 
 <body>
     <div id="map">
-        <button id="hello" onclick="helloButton()">Click me!</button>
+        <form action="myMap2.html" method="POST">
+            <table>
+                <select id="countryChosen" name="countryChosen"></select>
+                <input type='submit' value='submit' id="countrybtn" >
+                <button id="test">Test</button>
+               
+            </table>
+        </form>
     </div>
+  
 
-    <div><input type="radio" checked="checked"><span> Grayscale</span></div>
-    <div><input type="radio" checked="checked"><span> Streets</span></div>
-    
 
-    <!--addjquery-->
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
     <script src="JS/script.js"></script>
+    <script src="JS/jQuery.js"></script>
+
 </body>
 
 </html>
