--- a/myMap2.html
+++ b/myMap2.html
@@ -63,7 +63,7 @@
         <form action="myMap2.html" method="POST">
             <table>
                 <select id="countryChosen" name="countryChosen"></select>
-                <i class="fal fa-user"></i> <!-- uses light style -->
+                <!--<i class="fal fa-user"></i> <!-- uses light style -->
             </table>
         </form>
 
@@ -71,8 +71,10 @@
         <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
         <link rel="stylesheet" href="./CSS/easy-button.css">
         <!--here-->
-        <link href="./fontAwesome/css/all.css" rel="stylesheet"> <!--load all styles -->
-        <script defer src="./fontAwesome/js/all.js"></script> <!--load all styles -->
+        <link href="./fontAwesome/css/all.css" rel="stylesheet">
+        <!--load all styles -->
+        <script defer src="./fontAwesome/js/all.js"></script>
+        <!--load all styles -->
         <script src="./JS/easy-button.js"></script>
         <script src="JS/jQuery.js"></script>
         <script src="JS/script.js"></script>
