--- a/myMap2.html
+++ b/myMap2.html
@@ -4,14 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Document</title>
+    <title>My Interactive Map</title>
+    <link rel='icon' type='image/png' href='./favicon.png'>
+
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
     <link rel="stylesheet" href="CSS/stylesheet.css" />
     <link rel="stylesheet" href="./CSS/easy-button.css">
     <link href="./fontAwesome/css/all.css" rel="stylesheet">
     <link data-require="bootstrap-css" data-semver="3.3.6" rel="stylesheet"
         href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.css" />
-
 </head>
 
 <body>
